Stop hiding SearchForm in header on tablets (767 < w < 992)

--- a/styles/helvetica/boxes.scss
+++ b/styles/helvetica/boxes.scss
@@ -1,4 +1,5 @@
 .box {
+  clear: both;
   margin-bottom: 23px;
   border: 0;
   border-radius: 8px;
